--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="navbar-nav">
         <a href="index.html">Home</a>
-        <a href="Naufal.html">Kebudayaan</a>
+        <a href="naufal.html">Kebudayaan</a>
         <a href="aldis.html">Situs</a>
         <a href="antony.html">Tentang Kami</a>
       </div>
